--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -11,4 +11,22 @@
     </div>
 </div>
 
+<ul class="collapsible">
+    {% for task in task %}
+    <li>
+      <div class="collapsible-header white-text light-blue darken-4">
+        <i class="fas fa-caret-down"></i>
+        <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
+        {% if task.is_urgent == True %}
+            <i class= "fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
+        {% endif %}
+    </div>
+      <div class="collapsible-body">
+        <strong>{{ <task class="category"></task> }}</strong>
+        <p>{{ task.task_description }}</p>
+      </div>
+    </li>
+    {% endfor %}
+  </ul>
+
 {% endblock %}
