--- a/taskmanager/templates/add_task.html
+++ b/taskmanager/templates/add_task.html
@@ -9,8 +9,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
-                <input id="task_name" name="task_name" minlength="5" maxlength="50" type="text" class="validate"
-                    required>
+                <input id="task_name" name="task_name" minlength="5" maxlength="50" type="text" class="validate" required>
                 <label for="task_name">Task Name</label>
             </div>
         </div>
@@ -18,8 +17,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                <textarea id="task_description" name="task_description" minlength="5" maxlength="200" type="text"
-                    class="materialize-textarea validate" required></textarea>
+                <textarea id="task_description" name="task_description" minlength="5" maxlength="200"
+                    type="text" class="materialize-textarea validate" required></textarea>
                 <label for="task_description">Task Description</label>
             </div>
         </div>
@@ -48,7 +47,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                <select name="category_id" id="category_id" class="validate" required>
+                <select id="category_id" name="category_id" class="validate" required>
                     <option value="" disabled selected>Choose Category</option>
                     {% for category in categories %}
                         <option value="{{ category.id }}">{{ category.category_name }}</option>
